# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
loader/scripts/: main.py
page_loader/: __init__.py  loader.py  logging_config.py  namer.py  parser.py
page_loader/scripts/: definitions.py  main.py
page_loader/scripts/config/: definitions.py
tests/: conftest.py  test_cli.py  test_download.py  test_error_handling.py  test_exp.py  test_functional.py  test_loader.py  test_main.py
tests/dev_tests/fixtures/cli/: cli_output_engnr.txt  exp_cli_output_engnr.txt
tests/fixtures/: expected_cli_output.txt  remote_page.html  ru-hexlet-io-pages-about.html  saved_page.html  test_download.py
tests/tmp/: test_download.py  test_exp.py  test_loader.py
