[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page loader"
authors = ["algos"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
requests-mock = "^1.9.3"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
