[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader"
authors = ["algos"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
requests-mock = "^1.9.3"
beautifulsoup4 = "^4.10.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
